# checksum-tapestry

./: .gitlab-ci.yml  Cargo.toml  README.md
examples/: adler32_output_space_use.rs
src/: adler32.rs  crc.rs  crc_table.rs  fletcher16.rs  lib.rs
