[package]
name = "checksum-tapestry"
version = "0.2.0"
edition = "2021"
authors = ["Joshua Gerrish <jgerrish@gmail.com>"]
description = "Collection of checksum algorithms and examples"
keywords = ["checksum", "adler32", "algorithm", "crc", "fletcher16"]
readme = "README.md"
repository = "https://github.com/jgerrish/checksum-tapestry"
homepage = "https://github.com/jgerrish/checksum-tapestry"

[features]
experiments = ["dep:rand"]

[dependencies]
rand = { version = "0.8", optional = true }
